<resources>
    <string name="app_name">Wallpapers</string>

    <string name="no_service_available">No Service Available</string>
    <string name="please_retry_when_internet_is_back">Please retry when internet is back</string>
    <string name="image_view_content_description">photo details</string>
    <string name="download">Download</string>
    <string name="share">Share image</string>
    <string name="set_wallpaper">Set wallpaper</string>
    <string name="photo_by">Photo By</string>
    <string name="location">Location:</string>
    <string name="upward_arrow">upward arrow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="nature">Nature</string>
    <string name="art">Art</string>
    <string name="architecture">Architecture</string>
    <string name="sky_high">Sky high</string>
    <string name="animals">Animals</string>
    <string name="cars">Cars</string>
    <string name="delete">delete</string>
    <string name="no_favorite_images">No favorite images</string>
    <string name="others">Others</string>
    <string name="about_us">About us</string>
    <string name="rate_us">Rate us</string>
    <string name="contact_us">Contact us</string>
    <string name="about_us_description">We are a small studio specialized in software development, we love building advanced native android apps, this is our main specialization, we follows the best practises. You can learn more about us at: infix.studios web page.</string>
    <string name="navigation_drawer_header_logo">navigation drawer header logo representing infix studios</string>
    <string name="search_wallpapers">Search Wallpapers</string>
</resources>
