<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group1">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/categoriesFragment"
            android:icon="@drawable/ic_category"
            android:title="@string/categories" />
        <item
            android:id="@+id/searchFragment"
            android:icon="@drawable/ic_search"
            android:title="@string/search" />
        <item
            android:id="@+id/favoriteFragment"
            android:icon="@drawable/ic_favorite_24"
            android:title="@string/favorite" />
    </group>
    <item
        android:id="@+id/test_title"
        android:title="@string/others">
        <menu>
            <item
                android:id="@+id/aboutFragment"
                android:icon="@drawable/ic_about_us"
                android:title="@string/about_us" />
            <item
                android:id="@+id/rate_us_item"
                android:icon="@drawable/ic_rate_review"
                android:title="@string/rate_us" />
            <item
                android:id="@+id/contact_us_item"
                android:icon="@drawable/ic_contact_us"
                android:title="@string/contact_us" />
        </menu>
    </item>

</menu>