<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".categories.CategoriesFragment">

            <Button
                android:id="@+id/cars_category_button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:paddingTop="22dp"
                android:paddingBottom="8dp"
                android:layout_marginBottom="1dp"
                android:drawableTop="@drawable/ic_car"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/cars"
                app:layout_constraintBottom_toTopOf="@+id/sky_category_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/animals_category_button"
                app:layout_constraintVertical_weight="1" />

            <Button
                android:id="@+id/animals_category_button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="1dp"
                android:paddingTop="22dp"
                android:paddingBottom="8dp"
                android:drawableTop="@drawable/ic_pets"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/animals"
                app:layout_constraintBottom_toTopOf="@+id/cars_category_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintVertical_weight="1" />

            <Button
                android:id="@+id/sky_category_button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="1dp"
                android:paddingTop="22dp"
                android:paddingBottom="8dp"
                android:drawableTop="@drawable/ic_cloud"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/sky_high"
                app:layout_constraintBottom_toTopOf="@+id/architecture_category_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cars_category_button"
                app:layout_constraintVertical_weight="1" />

            <Button
                android:id="@+id/nature_category_button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="1dp"
                android:paddingTop="22dp"
                android:paddingBottom="8dp"
                android:drawableTop="@drawable/ic_nature"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/nature"
                app:layout_constraintBottom_toTopOf="@+id/art_category_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/architecture_category_button"
                app:layout_constraintVertical_weight="1" />

            <Button
                android:id="@+id/architecture_category_button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="1dp"
                android:paddingTop="22dp"
                android:paddingBottom="8dp"
                android:drawableTop="@drawable/ic_business"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/architecture"
                app:layout_constraintBottom_toTopOf="@+id/nature_category_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sky_category_button"
                app:layout_constraintVertical_weight="1" />

            <Button
                android:id="@+id/art_category_button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="54dp"
                android:paddingTop="22dp"
                android:paddingBottom="8dp"
                android:drawableTop="@drawable/ic_color_lens"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/art"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nature_category_button"
                app:layout_constraintVertical_weight="1" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>